# rust_api

./: Cargo.toml
src/: main.rs
src/db/: connection.rs  dbhandle.rs  mod.rs  settings.rs  user_query.rs
src/event/: mod.rs  user.rs
src/models/: mod.rs  models.rs
src/routes/: routes.rs  user_routes.rs
