[package]
name = "api_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.4"
deadpool-postgres = "0.14.1"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
